--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Document</title>
+   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <p>Hello world</p>
+   <header>
+      <h2>logo</h2>
+      <nav>
+         <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Contact</li>
+         </ul>
+      </nav>
+   </header>
 </body>
 </html>
