--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
-   <link rel="stylesheet" href="style.css">
-</head>
-<body>
-   <header>
-      <h2>logo</h2>
-      <nav>
-         <ul>
-            <li>Home</li>
-            <li>About</li>
-            <li>Contact</li>
-         </ul>
-      </nav>
-   </header>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="assets/css/style.css" />
+  </head>
+  <body>
+    <aside>
+       <!-- Rolly -->
+    </aside>
+    <main>
+      <header>
+         <!-- Cedric -->
+      </header>
+      <section></section>
+    </main>
+  </body>
 </html>
