feature : add aside menu

--- a/index.html
+++ b/index.html
@@ -10,6 +10,28 @@
   <body>
     <aside>
        <!-- Rolly -->
+       <div>
+         <img src="" alt="logo">
+         <h2>Dashboard</h2>
+       </div>
+
+       <div>
+         <ul>
+           <li>Home</li>
+           <li>Profile</li>
+           <li>Message</li>
+           <li>History</li>
+           <li>Tasks</li>
+           <li>Communities</li>
+         </ul>
+        </div>
+        <div>
+          <ul>
+            <li>Settings</li>
+            <li>Support</li>
+            <li>Privacy</li>
+          </ul>
+        </div>
     </aside>
     <main>
       <header>
