feature: add navigation bar

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@6.5.95/css/materialdesignicons.min.css">
   </head>
   <body>
     <aside>
@@ -14,6 +15,20 @@
     <main>
       <header>
          <!-- Cedric -->
+         <nav>
+            <div class="left">
+               <button>Q</button>
+               <input type="text">
+            </div>
+            <div></div>
+            <div class="right">
+               <img src="assets/images/bell-ring-outline.svg" alt="">
+               <div class="profile_picture">
+                  <img src="assets/images/profile.png" alt="">
+               </div>
+               <h3>Cedric karungu</h3>
+            </div>
+         </nav>
       </header>
       <section></section>
     </main>
