styles: adding menu's icons

--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
     <aside>
        <!-- Rolly -->
        <div>
-         <img src="" alt="logo">
+         <img src="view-dashboard.png" alt="logo">
          <h2>Dashboard</h2>
        </div>
 
        <div>
          <ul>
-           <li>Home</li>
-           <li>Profile</li>
-           <li>Message</li>
-           <li>History</li>
-           <li>Tasks</li>
-           <li>Communities</li>
+           <li><img src="home.png" alt="home">Home</li>
+           <li><img src="" alt="home">Profile</li>
+           <li><img src="message-reply.png" alt="message">Message</li>
+           <li><img src="clock.png" alt="Horloge">History</li>
+           <li><img src="file-multiple.png" alt="file multiple">Tasks</li>
+           <li><img src="account-group.png" alt="groupe">Communities</li>
          </ul>
         </div>
         <div>
           <ul>
-            <li>Settings</li>
-            <li>Support</li>
-            <li>Privacy</li>
+            <li><img src="cog-outline.png" alt="Tools">Settings</li>
+            <li><img src="help-box.png" alt="help">Support</li>
+            <li><img src="shield-check.png" alt="check">Privacy</li>
           </ul>
         </div>
     </aside>
