style: finish navigation bar

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@6.5.95/css/materialdesignicons.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
   </head>
   <body>
     <aside>
@@ -17,8 +19,8 @@
          <!-- Cedric -->
          <nav>
             <div class="left">
-               <button>Q</button>
-               <input type="text">
+               <img src="assets/images/magnify.svg" alt="">
+               <input type="text" class="search_bar">
             </div>
             <div></div>
             <div class="right">
