--- a/index.html
+++ b/index.html
@@ -53,6 +53,20 @@
                <h3>Cedric karungu</h3>
             </div>
          </nav>
+         <div class="hero">
+            <div class="profile">
+               <img src="assets/images/profile.png" alt="">
+               <div class="name">
+                  <h5>Hi there</h5>
+                  <h3>Cedric karungu(@Rolly)</h3>
+               </div>
+            </div>
+            <div class="actions">
+               <button>new</button>
+               <button>Upload</button>
+               <button>Share</button>
+            </div>
+         </div>
       </header>
       <section></section>
     </main>
