feature :putting all icons into images folder

--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
     <aside>
        <!-- Rolly -->
        <div id="titre">
-         <img src="view-dashboard.png" alt="logo">
+         <img src="assets/images/view-dashboard.png" alt="logo">
          <h2>Dashboard</h2>
        </div>
 
        <div>
          <ul>
-           <li><img src="home.png" alt="home"><span>Home</span></li>
-           <li><img src="card-account-details.png" alt="profile"><span>Profile</span></li>
-           <li><img src="message-reply.png" alt="message"><span>Message</span></li>
-           <li><img src="clock.png" alt="Horloge"><span>History</span></li>
-           <li><img src="file-multiple.png" alt="file multiple"><span>Tasks</span></li>
-           <li><img src="account-group.png" alt="groupe"><span>Communities</span></li>
+           <li><img src="assets/images/home.png" alt="home"><span>Home</span></li>
+           <li><img src="assets/images/card-account-details.png" alt="profile"><span>Profile</span></li>
+           <li><img src="assets/images/message-reply.png" alt="message"><span>Message</span></li>
+           <li><img src="assets/images/clock.png" alt="Horloge"><span>History</span></li>
+           <li><img src="assets/images/file-multiple.png" alt="file multiple"><span>Tasks</span></li>
+           <li><img src="assets/images/account-group.png" alt="groupe"><span>Communities</span></li>
          </ul>
         </div>
         <div>
           <ul>
-            <li><img src="cog-outline.png"  alt="Tools"><span>Settings</span></li>
-            <li><img src="help-box.png" alt="help"><span>Support</span></li>
-            <li><img src="shield-check.png" alt="check"><span>Privacy</span></li>
+            <li><img src="assets/images/cog-outline.png"  alt="Tools"><span>Settings</span></li>
+            <li><img src="assets/images/help-box.png" alt="help"><span>Support</span></li>
+            <li><img src="assets/images/shield-check.png" alt="check"><span>Privacy</span></li>
           </ul>
         </div>
     </aside>
