refact: refact the vertical links

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet">
   </head>
   <body>
-    <aside>
+    <aside class="vertical_links">
        <!-- Rolly -->
        <div id="titre">
          <img src="assets/images/view-dashboard.png" alt="logo">
@@ -68,7 +68,13 @@
             </div>
          </div>
       </header>
-      <section></section>
+      <section>
+         <div class="projects"></div>
+         <aside>
+            <div class="anouncement"></div>
+            <div class="treding"></div>
+         </aside>
+      </section>
     </main>
   </body>
 </html>
