refact: change the background color and somes margins

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   </head>
   <body>
     <aside class="vertical_links">
-       <!-- Rolly -->
        <div id="titre">
          <img src="assets/images/view-dashboard.png" alt="logo">
          <h2>Dashboard</h2>
@@ -28,7 +27,7 @@
            <li><img src="assets/images/account-group.png" alt="groupe"><span>Communities</span></li>
          </ul>
         </div>
-        <div>
+        <div class="features">
           <ul>
             <li><img src="assets/images/cog-outline.png"  alt="Tools"><span>Settings</span></li>
             <li><img src="assets/images/help-box.png" alt="help"><span>Support</span></li>
@@ -38,7 +37,6 @@
     </aside>
     <main>
       <header>
-         <!-- Cedric -->
          <nav>
             <div class="left">
                <img src="assets/images/magnify.svg" alt="">
