feature: add cards to main-project

--- a/index.html
+++ b/index.html
@@ -115,36 +115,86 @@
             <!-- single item -->
             <div class="single_project">
               <h4>Super cool project</h4>
-              <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut sit
-                illo libero, accusamus nemo nam vitae ad sunt dolores hic
-                provident iusto consequuntur placeat maiores illum esse qui
-                molestias veritatis?
-              </p>
+              <div class="content">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla ipsum beatae recusandae blanditiis veritatis, dolorem quidem officiis reprehenderit et quas pariatur consectetur. Consequuntur dolorum perspiciatis repudiandae maxime quia? Cumque, corporis?
+                </p>
+              </div>
               <div class="project_actions">
-                 <img src="assets/images/star-plus-outline.svg" alt="">
-                 <img src="assets/images/eye-plus-outline.svg" alt="">
-                 <img src="assets/images/source-fork.svg" alt="">
+                <img src="assets/images/star-plus-outline.svg" alt="" />
+                <img src="assets/images/eye-plus-outline.svg" alt="" />
+                <img src="assets/images/source-fork.svg" alt="" />
               </div>
             </div>
 
             <!-- single item -->
             <div class="single_project">
               <h4>Super cool project</h4>
-              <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut sit
-                illo libero, accusamus nemo nam vitae ad sunt dolores hic
-                provident iusto consequuntur placeat maiores illum esse qui
-                molestias veritatis?
-              </p>
+              <div class="content">
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut
+                  sit illo libero, accusamus nemo nam vitae ad
+                </p>
+              </div>
+
               <div class="project_actions">
-                 <img src="assets/images/star-plus-outline.svg" alt="">
-                 <img src="assets/images/eye-plus-outline.svg" alt="">
-                 <img src="assets/images/source-fork.svg" alt="">
+                <img src="assets/images/star-plus-outline.svg" alt="" />
+                <img src="assets/images/eye-plus-outline.svg" alt="" />
+                <img src="assets/images/source-fork.svg" alt="" />
+              </div>
+            </div>
+
+            <!-- single item -->
+            <div class="single_project">
+              <h4>Super cool project</h4>
+              <div class="content">
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut
+                  sit illo libero, accusamus nemo nam vitae ad
+                </p>
+              </div>
+
+              <div class="project_actions">
+                <img src="assets/images/star-plus-outline.svg" alt="" />
+                <img src="assets/images/eye-plus-outline.svg" alt="" />
+                <img src="assets/images/source-fork.svg" alt="" />
+              </div>
+            </div>
+
+            <!-- single item -->
+            <div class="single_project">
+              <h4>Super cool project</h4>
+              <div class="content">
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut
+                  sit illo libero, accusamus nemo nam vitae ad
+                </p>
+              </div>
+
+              <div class="project_actions">
+                <img src="assets/images/star-plus-outline.svg" alt="" />
+                <img src="assets/images/eye-plus-outline.svg" alt="" />
+                <img src="assets/images/source-fork.svg" alt="" />
+              </div>
+            </div>
+
+            <!-- single item -->
+            <div class="single_project">
+              <h4>Super cool project</h4>
+              <div class="content">
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut
+                  sit illo libero, accusamus nemo nam vitae ad
+                </p>
+              </div>
+
+              <div class="project_actions">
+                <img src="assets/images/star-plus-outline.svg" alt="" />
+                <img src="assets/images/eye-plus-outline.svg" alt="" />
+                <img src="assets/images/source-fork.svg" alt="" />
               </div>
             </div>
           </div>
-          
         </div>
         <aside>
           <div class="anouncement"></div>
