style: add style to each card

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fraunces:wght@700;900&family=Raleway:wght@500&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <aside class="vertical_links">
@@ -117,7 +123,9 @@
               <h4>Super cool project</h4>
               <div class="content">
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla ipsum beatae recusandae blanditiis veritatis, dolorem quidem officiis reprehenderit et quas pariatur consectetur. Consequuntur dolorum perspiciatis repudiandae maxime quia? Cumque, corporis?
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
+                  ipsum beatae recusandae blanditiis veritatis, dolorem quidem
+                  officiis reprehenderit et quas pariatur consectetur.
                 </p>
               </div>
               <div class="project_actions">
@@ -146,11 +154,10 @@
 
             <!-- single item -->
             <div class="single_project">
-              <h4>Super cool project</h4>
+              <h4>Less cool project</h4>
               <div class="content">
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut
-                  sit illo libero, accusamus nemo nam vitae ad
+                  Fuga tempora veniam est laborum velit voluptates consequuntur blanditiis.
                 </p>
               </div>
 
@@ -166,9 +173,8 @@
               <h4>Super cool project</h4>
               <div class="content">
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut
-                  sit illo libero, accusamus nemo nam vitae ad
-                </p>
+                  Nulla ipsum beatae recusandae blanditiis veritatis, dolorem quidem
+                  officiis reprehenderit et quas pariatur consectetur.
               </div>
 
               <div class="project_actions">
@@ -183,8 +189,7 @@
               <h4>Super cool project</h4>
               <div class="content">
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut
-                  sit illo libero, accusamus nemo nam vitae ad
+                  Dolore non sunt laudantium nihil sint.
                 </p>
               </div>
 
