--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </nav>
         <div class="hero">
           <div class="profile">
-            <img src="assets/images/profile.png" alt="" />
+            <img src="assets/images/profile.png" alt="profile" />
             <div class="name">
               <h5>Hi there</h5>
               <h3>Cedric karungu(@Rolly)</h3>
