features: adding text for announcement section

--- a/index.html
+++ b/index.html
@@ -70,7 +70,23 @@
       <section>
          <div class="projects"></div>
          <aside>
-            <div class="anouncement"></div>
+            <div class="anouncement">
+              <h3>Announcement</h3>
+              <div>
+                <h4><strong>Site Maintenance</strong></h4>
+                <p>Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec hendrerit sodales congue...</p>
+              </div>
+              <div>
+                <h4><strong>Community Share Day</strong></h4>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque soluta veritatis accusantium similique dignissimos iste? Nulla consequuntur eveniet ipsum, iure recusandae obcaecati, aliquid accusamus dolor at excepturi voluptatum error a.</p>
+              </div>
+              <div>
+                <h4><strong>Updated Privacy Police</strong></h4>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque soluta veritatis accusantium similique dignissimos iste? Nulla consequuntur eveniet ipsum, iure recusandae obcaecati, aliquid accusamus dolor at excepturi voluptatum error a.</p>
+              </div>
+              <div></div>
+              <div></div>
+            </div>
             <div class="treding"></div>
          </aside>
       </section>
