features: adding last texts

--- a/index.html
+++ b/index.html
@@ -116,27 +116,144 @@
         </div>
       </header>
       <section>
-         <div class="projects"></div>
-         <aside>
-            <div class="anouncement">
-              <h3>Announcement</h3>
-              <div>
-                <h4><strong>Site Maintenance</strong></h4>
-                <p>Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec hendrerit sodales congue...</p>
+        <div class="projects">
+          <h3>Your projects</h3>
+          <div class="projects_items">
+            <!-- single item -->
+            <div class="single_project">
+              <h4>Super cool project</h4>
+              <div class="content">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
+                  ipsum beatae recusandae blanditiis veritatis, dolorem quidem
+                  officiis reprehenderit et quas pariatur consectetur.
+                </p>
               </div>
-              <div>
-                <h4><strong>Community Share Day</strong></h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque soluta veritatis accusantium similique dignissimos iste? Nulla consequuntur eveniet ipsum, iure recusandae obcaecati, aliquid accusamus dolor at excepturi voluptatum error a.</p>
+              <div class="project_actions">
+                <img src="assets/images/star-plus-outline.svg" alt="" />
+                <img src="assets/images/eye-plus-outline.svg" alt="" />
+                <img src="assets/images/source-fork.svg" alt="" />
               </div>
-              <div>
-                <h4><strong>Updated Privacy Police</strong></h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque soluta veritatis accusantium similique dignissimos iste? Nulla consequuntur eveniet ipsum, iure recusandae obcaecati, aliquid accusamus dolor at excepturi voluptatum error a.</p>
-              </div>
-              <div></div>
-              <div></div>
             </div>
-            <div class="treding"></div>
-         </aside>
+
+            <!-- single item -->
+            <div class="single_project">
+              <h4>Super cool project</h4>
+              <div class="content">
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut
+                  sit illo libero, accusamus nemo nam vitae ad
+                </p>
+              </div>
+
+              <div class="project_actions">
+                <img src="assets/images/star-plus-outline.svg" alt="" />
+                <img src="assets/images/eye-plus-outline.svg" alt="" />
+                <img src="assets/images/source-fork.svg" alt="" />
+              </div>
+            </div>
+
+            <!-- single item -->
+            <div class="single_project">
+              <h4>Less cool project</h4>
+              <div class="content">
+                <p>
+                  Fuga tempora veniam est laborum velit voluptates consequuntur blanditiis.
+                </p>
+              </div>
+
+              <div class="project_actions">
+                <img src="assets/images/star-plus-outline.svg" alt="" />
+                <img src="assets/images/eye-plus-outline.svg" alt="" />
+                <img src="assets/images/source-fork.svg" alt="" />
+              </div>
+            </div>
+
+            <!-- single item -->
+            <div class="single_project">
+              <h4>Super cool project</h4>
+              <div class="content">
+                <p>
+                  Nulla ipsum beatae recusandae blanditiis veritatis, dolorem quidem
+                  officiis reprehenderit et quas pariatur consectetur.
+              </div>
+
+              <div class="project_actions">
+                <img src="assets/images/star-plus-outline.svg" alt="" />
+                <img src="assets/images/eye-plus-outline.svg" alt="" />
+                <img src="assets/images/source-fork.svg" alt="" />
+              </div>
+            </div>
+
+            <!-- single item -->
+            <div class="single_project">
+              <h4>Super cool project</h4>
+              <div class="content">
+                <p>
+                  Dolore non sunt laudantium nihil sint.
+                </p>
+              </div>
+
+              <div class="project_actions">
+                <img src="assets/images/star-plus-outline.svg" alt="" />
+                <img src="assets/images/eye-plus-outline.svg" alt="" />
+                <img src="assets/images/source-fork.svg" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+        <aside>
+          <div class="anouncement">
+          <h4><strong>Announcement</strong></h4>
+          <div>
+            <div>
+              <h5><strong>Site Maintenance</strong></h5>
+              <p>Vestibilum condimentum tellus lacus, in accusamus elit maximus ac. Donec hendrerit sodales congue...</p>
+            </div>
+            <div>
+              <h5><strong>Community Share Day</strong></h5>
+              <p>Nam vel lectus tincindut, rutrum Nulla eu, ornare libero. Aliquam dictum accumsan porttitor...</p>
+            </div>
+            <div>
+              <h5><strong>Update Privacy Police</strong></h5>
+              <p>Phasellus efficitur nisi eget elit consectetur, eget condimentum ante auctor. Cras fringilla saggitis sem in mattis...</p>
+            </div>
+          </div>
+          </div>
+          <div class="treding">
+            <h4><strong>Trending</strong></h4>
+            <div>
+              <div>
+                <img src="" alt="tegan">
+                <div>
+                  <p>@tegan</p>
+                  <p>World Peace Builder</p>
+                </div>
+              </div>
+              <div>
+                <img src="" alt="morgan">
+                <div>
+                  <p>@tegan</p>
+                  <p>Super Cool Project</p>
+                </div>
+              </div>
+              <div>
+                <img src="" alt="kendall">
+                <div>
+                  <p>@kendall</p>
+                  <p>Life Changing App</p>
+                </div>
+              </div>
+              <div>
+                <img src="" alt="morgan">
+                <div>
+                  <p>@alex</p>
+                  <p>No Traffic Maker</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </aside>
       </section>
     </main>
   </body>
