--- a/index.html
+++ b/index.html
@@ -204,21 +204,29 @@
         </div>
         <aside>
           <div class="anouncement">
-          <h4><strong>Announcement</strong></h4>
-          <div>
-            <div>
-              <h5><strong>Site Maintenance</strong></h5>
-              <p>Vestibilum condimentum tellus lacus, in accusamus elit maximus ac. Donec hendrerit sodales congue...</p>
+          <h3>Announcement</h3>
+          <article>
+            <div class="part">
+              <h5>Site Maintenance</h5>
+              <p>
+                Vestibilum condimentum tellus lacus, in accusamus elit maximus ac. Donec hendrerit sodales congue. 
+              </p>
+              <div class="divider"></div>
             </div>
-            <div>
-              <h5><strong>Community Share Day</strong></h5>
-              <p>Nam vel lectus tincindut, rutrum Nulla eu, ornare libero. Aliquam dictum accumsan porttitor...</p>
+            <div class="part">
+              <h5>Site Maintenance</h5>
+              <p>
+                Vestibilum condimentum tellus lacus, in accusamus elit maximus ac. Donec hendrerit sodales congue. 
+              </p>
+              <div class="divider"></div>
             </div>
-            <div>
-              <h5><strong>Update Privacy Police</strong></h5>
-              <p>Phasellus efficitur nisi eget elit consectetur, eget condimentum ante auctor. Cras fringilla saggitis sem in mattis...</p>
+            <div class="part">
+              <h5>Site Maintenance</h5>
+              <p>
+                Vestibilum condimentum tellus lacus, in accusamus elit maximus ac. Donec hendrerit sodales congue. 
+              </p>
             </div>
-          </div>
+          </article>
           </div>
           <div class="treding">
             <h4><strong>Trending</strong></h4>
