feature: add treding items

--- a/index.html
+++ b/index.html
@@ -229,37 +229,31 @@
           </article>
           </div>
           <div class="treding">
-            <h4><strong>Trending</strong></h4>
-            <div>
-              <div>
-                <img src="" alt="tegan">
+            <h3>Trending</h3>
+
+            <article>
+              <div class="person">
+                <img src="assets//images/treding_img/068e542866ad718fad29978646f6998c.jpeg" alt="tegan">
                 <div>
                   <p>@tegan</p>
                   <p>World Peace Builder</p>
                 </div>
               </div>
-              <div>
-                <img src="" alt="morgan">
+              <div class="person">
+                <img src="assets//images/treding_img/Screen Shot 2022-03-25 at 4.58.19 PM.png" alt="tegan">
                 <div>
                   <p>@tegan</p>
-                  <p>Super Cool Project</p>
+                  <p>World Peace Builder</p>
                 </div>
               </div>
-              <div>
-                <img src="" alt="kendall">
+              <div class="person">
+                <img src="assets//images/treding_img/Screen Shot 2022-03-25 at 9.31.52 AM.png" alt="tegan">
                 <div>
-                  <p>@kendall</p>
-                  <p>Life Changing App</p>
+                  <p>@tegan</p>
+                  <p>World Peace Builder</p>
                 </div>
               </div>
-              <div>
-                <img src="" alt="morgan">
-                <div>
-                  <p>@alex</p>
-                  <p>No Traffic Maker</p>
-                </div>
-              </div>
-            </div>
+            </article>
           </div>
         </aside>
       </section>
