refact: change font familly

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/mobile.css">
+    <link rel="stylesheet" href="assets/css/mobile.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@mdi/font@6.5.95/css/materialdesignicons.min.css"
@@ -18,7 +18,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Fraunces:wght@700;900&family=Raleway:wght@500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -88,7 +88,7 @@
       <header>
         <nav>
           <div class="left">
-            <img src="assets/images/magnify.svg" alt="" id="cloche"/>
+            <img src="assets/images/magnify.svg" alt="" id="cloche" />
             <input type="text" class="search_bar" />
           </div>
           <div></div>
@@ -158,7 +158,8 @@
               <h4>Less cool project</h4>
               <div class="content">
                 <p>
-                  Fuga tempora veniam est laborum velit voluptates consequuntur blanditiis.
+                  Fuga tempora veniam est laborum velit voluptates consequuntur
+                  blanditiis.
                 </p>
               </div>
 
@@ -174,8 +175,9 @@
               <h4>Super cool project</h4>
               <div class="content">
                 <p>
-                  Nulla ipsum beatae recusandae blanditiis veritatis, dolorem quidem
-                  officiis reprehenderit et quas pariatur consectetur.
+                  Nulla ipsum beatae recusandae blanditiis veritatis, dolorem
+                  quidem officiis reprehenderit et quas pariatur consectetur.
+                </p>
               </div>
 
               <div class="project_actions">
@@ -189,9 +191,7 @@
             <div class="single_project">
               <h4>Super cool project</h4>
               <div class="content">
-                <p>
-                  Dolore non sunt laudantium nihil sint.
-                </p>
+                <p>Dolore non sunt laudantium nihil sint.</p>
               </div>
 
               <div class="project_actions">
@@ -204,50 +204,62 @@
         </div>
         <aside>
           <div class="anouncement">
-          <h3>Announcement</h3>
-          <article>
-            <div class="part">
-              <h5>Site Maintenance</h5>
-              <p>
-                Vestibilum condimentum tellus lacus, in accusamus elit maximus ac. Donec hendrerit sodales congue. 
-              </p>
-              <div class="divider"></div>
-            </div>
-            <div class="part">
-              <h5>Site Maintenance</h5>
-              <p>
-                Vestibilum condimentum tellus lacus, in accusamus elit maximus ac. Donec hendrerit sodales congue. 
-              </p>
-              <div class="divider"></div>
-            </div>
-            <div class="part">
-              <h5>Site Maintenance</h5>
-              <p>
-                Vestibilum condimentum tellus lacus, in accusamus elit maximus ac. Donec hendrerit sodales congue. 
-              </p>
-            </div>
-          </article>
+            <h3>Announcement</h3>
+            <article>
+              <div class="part">
+                <h5>Site Maintenance</h5>
+                <p>
+                  Vestibilum condimentum tellus lacus, in accusamus elit maximus
+                  ac. Donec hendrerit sodales congue.
+                </p>
+                <div class="divider"></div>
+              </div>
+              <div class="part">
+                <h5>Site Maintenance</h5>
+                <p>
+                  Vestibilum condimentum tellus lacus, in accusamus elit maximus
+                  ac. Donec hendrerit sodales congue.
+                </p>
+                <div class="divider"></div>
+              </div>
+              <div class="part">
+                <h5>Site Maintenance</h5>
+                <p>
+                  Vestibilum condimentum tellus lacus, in accusamus elit maximus
+                  ac. Donec hendrerit sodales congue.
+                </p>
+              </div>
+            </article>
           </div>
           <div class="treding">
             <h3>Trending</h3>
 
             <article>
               <div class="person">
-                <img src="assets//images/treding_img/068e542866ad718fad29978646f6998c.jpeg" alt="tegan">
+                <img
+                  src="assets//images/treding_img/068e542866ad718fad29978646f6998c.jpeg"
+                  alt="tegan"
+                />
                 <div>
                   <p>@tegan</p>
                   <p>World Peace Builder</p>
                 </div>
               </div>
               <div class="person">
-                <img src="assets//images/treding_img/Screen Shot 2022-03-25 at 4.58.19 PM.png" alt="tegan">
+                <img
+                  src="assets//images/treding_img/Screen Shot 2022-03-25 at 4.58.19 PM.png"
+                  alt="tegan"
+                />
                 <div>
                   <p>@tegan</p>
                   <p>World Peace Builder</p>
                 </div>
               </div>
               <div class="person">
-                <img src="assets//images/treding_img/Screen Shot 2022-03-25 at 9.31.52 AM.png" alt="tegan">
+                <img
+                  src="assets//images/treding_img/Screen Shot 2022-03-25 at 9.31.52 AM.png"
+                  alt="tegan"
+                />
                 <div>
                   <p>@tegan</p>
                   <p>World Peace Builder</p>
