refact: change font familly

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                   alt="tegan"
                 />
                 <div>
-                  <p>@tegan</p>
+                  <h5>@Arick</h5>
                   <p>World Peace Builder</p>
                 </div>
               </div>
@@ -251,8 +251,8 @@
                   alt="tegan"
                 />
                 <div>
-                  <p>@tegan</p>
-                  <p>World Peace Builder</p>
+                  <h5>@Cedric</h5>
+                  <p>Super cool project</p>
                 </div>
               </div>
               <div class="person">
@@ -261,8 +261,8 @@
                   alt="tegan"
                 />
                 <div>
-                  <p>@tegan</p>
-                  <p>World Peace Builder</p>
+                  <h5>@Rolly</h5>
+                  <p>Life Changing app</p>
                 </div>
               </div>
             </article>
